package com.diguage.didp.composite;

/**
 * Composite 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class Composite {
}
