package com.diguage.didp.composite;

/**
 * Leaf 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-16
 */
public class Leaf {
}
